# microduck_kinematics_rs

./: .gitignore  Cargo.toml  README.md
assets/pre-alpha/: robot_walk.xml
assets/v1/: robot_walk.xml
assets/v1.5/: robot_walk.xml
scripts/: gen_fixtures.py  pyproject.toml  strip_mjcf.py
src/: lib.rs  mjcf.rs  model.rs
tests/: fk_against_mujoco.rs
tests/fixtures/: fk_pre-alpha.json  fk_v1.5.json  fk_v1.json
